# wterm

./: .gitignore  .travis.yml  Cargo.toml  Cross.toml  README.md  appveyor.yml  build.rs
dashboard/: index.js  package.json  rollup.config.js
dashboard/src/: app.svelte  chart.svelte  keyboard.svelte
src/: bridge.rs  main.rs
static/: app.css  app.js  index.html  wterm.css  wterm.js
web/: app.svelte  chart.svelte  index.js  package.json  rollup.config.js
web/src/: app.svelte  chart.svelte  xterm.svelte
