[package]
edition = "2018"
name = "wterm"
version = "0.0.3"
description = "Serial port to WebSocket bridge with embedded web terminal"
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/dotcypress/wterm"
documentation = "https://docs.rs/wterm"

[dependencies]
actix = "0.8.3"
actix-web = "1.0"
actix-files = "0.1.7"
actix-web-actors = "1.0.2"
bytes = "0.4.12"
serialport = "3.3.0"
structopt = "0.3.4"