[package]
edition = "2018"
name = "wterm"
version = "0.3.4"
description = "Serial port to WebSocket bridge with embedded web terminal"
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/dotcypress/wterm"
documentation = "https://docs.rs/wterm"

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0 "
actix-files = "0.6.6"
bytes = "1.8.0"
serialport = { version = "4.6.0", default-features = false }
structopt = "0.3.4"
actix-ws = "0.3.0"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
tokio = { version = "1.24", features = ["sync", "rt", "macros"] }

[features]
libudev = ["serialport/libudev"]
